# DIEF_initial_exploration

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  COPYRIGHT.txt  Dockerfile  README.md  docker-compose.yml  pyproject.toml  trained_model_Melbourne_05_Y5_DNN.pth  trained_model_Melbourne_05_Y5_LSTM.pth  trained_model_Melbourne_05_Y5_classweighted_DNN.pth  trained_model_Melbourne_05_Y5_classweighted_LSTM.pth  trained_model_Melbourne_05_Y5_resampled_DNN.pth  trained_model_Melbourne_05_Y5_resampled_LSTM.pth  trained_model_Melbourne_05_Y5_resampled_XGB.model  trained_model_Sydney_05_Y5_DNN.pth  trained_model_Sydney_05_Y5_LSTM.pth  trained_model_Sydney_05_Y5_classweighted_DNN.pth  trained_model_Sydney_05_Y5_classweighted_LSTM.pth  trained_model_Sydney_05_Y5_resampled_DNN.pth  trained_model_Sydney_05_Y5_resampled_LSTM.pth  trained_model_Sydney_05_Y5_reweighted_XGB.model  trained_on_Brisbane_05_DNN.pth  trained_on_Brisbane_05_LSTM.pth  trained_on_Brisbane_05_XGB.model  trained_on_Brisbane_05_classweighted_DNN.pth  trained_on_Brisbane_05_classweighted_LSTM.pth  trained_on_Brisbane_05_resampled_DNN.pth  trained_on_Brisbane_05_resampled_LSTM.pth  trained_on_Brisbane_05_reweighted_XGB.model  trained_on_Combo1_DNN.pth  trained_on_Combo1_LSTM.pth  trained_on_Combo1_classweighted_DNN.pth  trained_on_Combo1_classweighted_LSTM.pth  trained_on_Combo1_resampled_DNN.pth  trained_on_Combo1_resampled_LSTM.pth  trained_on_Combo1_reweighted_XGB.model  trained_on_Combo2_DNN.pth  trained_on_Combo2_LSTM.pth  (+53 more)
src/dief_competition_2/: Classifier_Predictor_.py  Imbalanced_classifier_2.py  Imbalanced_data_classifier.py  Predictor_Step_2.py  __init__.py  baseline_regressor.py  classify.py  demand_response_flag_classifier.py  final_results.xlsx  results_table.py
src/dief_competition_2/init_utils/: config.py
tests/: test_example.py
